subiendo a stilo para explorer

--- a/app/views/notificaciones_admin_actualice/_header_notification.html.erb
+++ b/app/views/notificaciones_admin_actualice/_header_notification.html.erb
@@ -3,6 +3,7 @@
 <div class="span16" style="margin:0px; margin-bottom:5px;">
 
  <div class="span15" style="
+    background-color:#00A1BA;
 	opacity:1;
 	  filter:alpha(opacity=60); background-image: linear-gradient(bottom, rgb(40,51,50) 23%, rgb(66,77,76) 68%);
 	
@@ -63,8 +64,13 @@ $('#boton_desplegar_ocultar').click(function () {
 margin-left:30px;background-color:#f7f7f7;" id="notificaciones-admin"> 
 	<% @notificaciones_admin_actualice.reverse.each do |actualice|%>
 	 <div class="span14">
-	 <div class="span7" style="opacity:0.4;
+	 <div class="span7" style="
+	
+	background-color:#727F81;
+	
+	opacity:0.4;
 	  filter:alpha(opacity=60); background-image: linear-gradient(bottom, rgb(40,51,50) 23%, rgb(66,77,76) 68%);
+	
 	background-image: -o-linear-gradient(bottom, rgb(40,51,50) 23%, rgb(66,77,76) 68%);
 	background-image: -moz-linear-gradient(bottom, rgb(40,51,50) 23%, rgb(66,77,76) 68%);
 	background-image: -webkit-linear-gradient(bottom, rgb(40,51,50) 23%, rgb(66,77,76) 68%);
