--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -127,3 +127,24 @@
  </div>
 </div>
 </div>
+<% if current_user.new_old == 0%>
+   <div class="modal-backdrop.fade.in modal" style="background-color:#404040; color:#fff;">
+	
+   <div class="modal-header" > 
+	<h3 style="color:#fff;"><center> Hola bienvenido a Cúrsame </cursame> </h3>
+   </div>
+    <div class="modal-body">
+	<center>
+	 <object width="420" height="315"><param name="movie"    value="http://www.youtube.com/v/gudXW66O9OM?version=3&amp;hl=es_ES&amp;rel=0"></param><param name="allowFullScreen" value="true" play="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/gudXW66O9OM?version=3&amp;hl=es_ES&amp;rel=0&amp;autoplay=1" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true" autoplay="true"></embed></object>
+	</center>
+	</div>
+	<div class="modal-footer" style="background-color:#404040; color:#fff;">
+		  <%= semantic_form_for @new_users_change_type do |n|%>
+		      <%= n.hidden_field :new_old, :value => 1 %>
+		        <%= n.hidden_field :user_id, :value => current_user.id%>
+		      <%= n.submit "ya no deseo ver el video", :class => "btn danger"%>
+		  <%end%>
+	</div>
+   </div>
+<%else%>
+<%end%>
