--- a/app/views/shared/_mobile.html.erb
+++ b/app/views/shared/_mobile.html.erb
@@ -67,7 +67,12 @@
 <style type="text/css">
 </style>
 <link rel="stylesheet" href="/assets/Cursame/resources/css/app.css" />
-<script src="/assets/Cursame/sdk/sencha-touch.js"></script>
+<script src="/assets/Cursame/sdk/sencha-touch-all.js"></script>
+
+<!--<script src="/assets/Cursame/app/model/model_min.js"></script>
+<script src="/assets/Cursame/app/store/store_min.js"></script>
+<script src="/assets/Cursame/app/view/view_min.js"></script>-->
+
 <script src="/assets/Cursame/app.js"></script>
  <script  type="text/javascript">
 	log = function(o){
