--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -5,10 +5,19 @@
         <%= link_to image_tag("logo.png"), root_path, :class => "brand" %>
       </div>
       
-      <%= tabs_tag :open_tabs => { :class => "nav" } do |tab| %>
-        <%= tab.dashboard t('dashboard.start'), root_path %>
-        <%= tab.profile t('dashboard.profile'), current_user %>
-      <% end %>
+       
+        <% if current_network.variante == "free"%>
+        <%= tabs_tag :open_tabs => { :class => "nav" } do |tab| %>
+        <%= tab.principal_wall t('dashboard.start'), root_path %>       
+        <%= tab.profile t('dashboard.profile'), current_user %> 
+        <%end%>
+        <%else%>
+        <%= tabs_tag :open_tabs => { :class => "nav" } do |tab| %>
+        <%= tab.principal_wall t('dashboard.start'), root_path %> 
+        <%= tab.profile t('dashboard.profile'), current_user %>    
+        <%= tab.dashboard t('dashboard.propiety'), dashboard_path %>
+        <%end%>
+        <%end%>
                  
       <ul class="nav secondary-nav">
         <li class="dropdown">
