--- a/public/assets/Cursame/resources/css/app.css
+++ b/public/assets/Cursame/resources/css/app.css
@@ -6528,3 +6528,7 @@ input[type="search"]::-webkit-search-cancel-button {
 .fill-container {
   margin: -17px -10px -9px -10px;
 }
+iframe{
+	width: 391px;
+	height:293px;
+}
