--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -127,7 +127,7 @@
  </div>
 </div>
 </div>
-<% if 1 == 0%>
+<% if current_user.new_old == 0%>
    <div class="modal-backdrop.fade.in modal" style="background-color:#404040; color:#fff;">
 	
    <div class="modal-header" > 
