--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,8 +1,8 @@
 <div class="topbar">
-  <div class="fill">
+  <div class="fill" style="background-color: #005C84">
     <div class="container">
       <div class="logo-container">
-        <%= link_to image_tag("logo.png"), root_path, :class => "brand" %>
+        <%= link_to image_tag("logo2.png"), root_path, :class => "brand" %>
       </div>
       
        
