--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
             <%= image_tag(@network.logo_file.large.url) %>
             <%end%>
             <%if @network.slogan == nil %>
-              <h1> Bienvenido a Cúrsame</h2>
+             <!-- <h1> Bienvenido a Cúrsame</h2> -->
             <%else%>
               <h1><%= @network.slogan %></h1>
             <%end%>
