subiendo cambios en styles network

--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav secondary-nav">
         <li class="dropdown">
           <%= link_to "#{current_user.first_name}" + " #{current_user.last_name}", "#", :class => "dropdown-toggle"%>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu" style="background-color: #005C84">
             <li><%= link_to t('shared.toolbar.settings'), settings_path %></li>
             <li><%= link_to t('.soporte y sugerencias'), soporte_path %></li>
             <li class="divider"></li>
