--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
     @notificaciones_admin_actualice_last = NotificacionesAdminActualouse.last
 	%>
 	<%if user_signed_in? %>
-	<%= render :partial => "notificaciones_admin_actualice/header_notification"%>
+	<%#= render :partial => "notificaciones_admin_actualice/header_notification"%>
 	<%else%>
 	<%end%>
 	 </div>
