--- a/app/views/networks/principal_wall.html.erb
+++ b/app/views/networks/principal_wall.html.erb
@@ -25,3 +25,12 @@
 	</div>  
   </div>
 </div>
+<%= render :partial => "shared/footer"%>
+</div>
+</div>
+
+<script type="text/javascript">
+  $(function(){
+    setupAutoScroll();
+  });
+</script>
