--- a/app/views/home/_principal_wall_menu.html.erb
+++ b/app/views/home/_principal_wall_menu.html.erb
@@ -7,6 +7,10 @@
 	    <%= tab.course "Manejo de campañas", dashboard_path, :class => "info" %>
 	    <%= tab.assignments "Mis usuarios favoritos", my_favorite_users_path, :class => "favoritos" %>
 	 <% end %>
+	
+	<% @user.favorites.each do |user_favorites| %>
+	   <%=link_to image_tag(user_favorites.avatar), user_path(user_favorites.user_favorite_id), :rel => "dashboard-tip", :title => (user_favorites.name) %>
+	<%end%>
    
 	<%= render :partial => "home/members" %>
  
