--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -61,8 +61,8 @@ $(document).ready(function() {
    </p>   
  </div>
  <div class="modal-body">
- <center>
-	<iframe width="520" height="293" src="http://www.youtube.com/embed/rwg4VK5mCKs" frameborder="0" allowfullscreen></iframe>
- </center>
+ 	 <center>
+	<object width="520" height="315"><param name="movie" value="http://www.youtube.com/v/gudXW66O9OM?version=3&amp;hl=es_ES&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/gudXW66O9OM?version=3&amp;hl=es_ES&amp;rel=0" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+	 </center>
  </div>
 </div>
