subiendo cambios en tutorialseeee

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="span3" style="margin:0;">
-        <%= render :partial => "shared/adds" %>
+        <%#= render :partial => "shared/adds" %>
       </div>
     </div>
     
