--- a/app/views/shared/_publicity.html.erb
+++ b/app/views/shared/_publicity.html.erb
@@ -1,1 +1,1 @@
-	<%= render :partial => "tutoriales/tutorials"%>
+	<%= link_to image_tag("banner.png"), 'https://www.movistar.com.mx/movistartotalparticulares/', {:target => "_blank" } %>
