--- a/public/assets/Cursame/resources/sass/app.scss
+++ b/public/assets/Cursame/resources/sass/app.scss
@@ -271,3 +271,8 @@ $list-active-gradient: matte;
 .fill-container{
 	margin:-17px -10px -9px -10px;
 }
+
+iframe{
+	width: 291px;
+	height:193px;
+}
