probando manejos mejorados de administradores

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -26,7 +26,8 @@
             <div class="span2 padding-top">
 	         
 	         <!-- <div class="btn" data-toggle="modal" href="#oldCourses" style="margin:2px;"><%= "Anteriores" %></div></br> -->
-              <% if current_user.teacher? %>
+              <% if current_user.role == "sepervisor" %>
+               <!-- if current_user.teacher? metodo usado con anterioridad-->
                   <div style="margin:2px;" ><%= link_to("+ " + t('courses.create_course'), new_course_path, :class => "btn info small") %></div>    
               <% end %>
             </div>
