--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -36,7 +36,7 @@
             <h2><%= t('.title') %></h2>
           </div>
           <div class="span3">
-            <% if current_user.teacher? %>
+            <% if current_user.role == "sepervisor" %>
               <%= link_to("+ " + t('courses.create_course'), new_course_path, :class => "btn small right") %>
             <% end %>
           </div>
