--- a/app/views/shared/_assets_fields_for_comment.html.erb
+++ b/app/views/shared/_assets_fields_for_comment.html.erb
@@ -19,7 +19,10 @@
       </ol>
     </fieldset>
   <% end %>
+<!-- suprimiento permisos de agregar archivos de usuarios no administradores-->
+<% if current_user.role == "sepervisor" %>
   <%= link_to t('courses.add_asset'), '#', :class => 'btn small info add_record left', :style => 'display:none' %>
+<%end%>
   <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :submit, :class => "btn right"}, :wrapper_html => {:class=>"right"} %>
 </fieldset>
 <%= link_to t('comments.insert_multimedia'), 'javascript:void(0)',:rel => "tooltip", :class => 'small left', :title => "#{t('comments.tooltip')}" %>
