--- a/app/views/shared/_assets_fields_for_comment.html.erb
+++ b/app/views/shared/_assets_fields_for_comment.html.erb
@@ -20,7 +20,7 @@
     </fieldset>
   <% end %>
 <!-- suprimiento permisos de agregar archivos de usuarios no administradores-->
-<% if current_user.role == "sepervisor" %>
+<% if current_user.role == "supervisor" %>
   <%= link_to t('courses.add_asset'), '#', :class => 'btn small info add_record left', :style => 'display:none' %>
 <%end%>
   <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :submit, :class => "btn right"}, :wrapper_html => {:class=>"right"} %>
