--- a/app/views/supervisor/shared/_courses.html.erb
+++ b/app/views/supervisor/shared/_courses.html.erb
@@ -15,9 +15,9 @@
                <h2><%= t('courses.courses') %></h2>
              </div>
              <div class="span3">
-               <% if current_user.teacher? %>
-                 <%= link_to("+ " + t('courses.create_course'), new_course_path, :class => "btn small right") %>
-               <% end %>
+               	 <% if current_user.role == "supervisor" %>
+		              <%= link_to("+ " + t('courses.create_course'), new_course_path, :class => "btn small right") %>
+		            <% end %>
              </div>
            </div>
 
