mejoras de la mobile app

--- a/public/assets/Cursame/resources/sass/app.scss
+++ b/public/assets/Cursame/resources/sass/app.scss
@@ -67,6 +67,11 @@ $list-active-gradient: matte;
 @include pictos-iconmask('help_black');
 @include pictos-iconmask('user_list');
 @include pictos-iconmask('movistar');
+@include pictos-iconmask('rss_black2');
+@include pictos-iconmask('tags');
+@include pictos-iconmask('rss_black2');
+@include pictos-iconmask('attachment');
+@include pictos-iconmask('compose');
 
 
 //login form
