--- a/app/views/layouts/new_network.html.erb
+++ b/app/views/layouts/new_network.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html style="background-color: #000;">
+<head style="background-color: #000;">
   <meta charset="utf-8" />
   <title>Cúrsame</title>
   <%= stylesheet_link_tag    "application" %>
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/favicon.ico" />
   <%= yield :head %>
 </head>
-<body>
+<body  style="background-color: #000;">
 
   <!-- User voice plugin -->
   <script type="text/javascript">
