--- a/app/views/networks/_new_network.html.erb
+++ b/app/views/networks/_new_network.html.erb
@@ -1,22 +1,22 @@
+
+<div cass="container" style=" " >
 <div class="container well" style="background-color: #fff;">
 <div class="span15">
-	<div class="span7"  style="float:left; margin:20px; color:#fff;">
-		<%= image_tag("new-good.png")%>
+	<div class="span7"  style="float:left; margin-top:0px; color:#fff;">
 		<%= image_tag("nosotros/cursame.png")%>
-		<h3 style="color:#000;">Bienvenido a la red de cúrsame es necesario que llenes
-			 cada uno de los campos para poder crear tu nueva red, 
+		<h3 style="color:#00AFC9;">Bienvenido a la red de cúrsame es necesario que llenes
+			 cada uno de los campos para poder crear tu nueva red FREE!!, 
 			después te llegará un mail de confirmación mediante el 
-			cual podrás acceder a tu usuario para configurar tu nueva 
-			red.</h3>
+			cual podrás acceder a tu usuario para configurar la red.</h3>
 	</div>
-<div class="span6" style="margin-top:30px;">
+<div class="span6" style="margin-top:10px;">
 <h4 style="color:#000;" > Crea un selecciona un dominio para la red. </h4></br></br>
 <%= semantic_form_for @network do |form| %>
   <%= form.inputs do %>
     <%= form.input :name %>
     <%= form.input :subdomain %>
-    <%= form.label :versión_a_usar%>
-    <%= form.select :variante, options_for_select([[t('.free'), "free"],[t('.pro'), "pro"],[t('.enterprise'),"enterprise"]]) %>
+    <%= form.hidden_field :variante, :value => "free"%>
+    <%#= form.select :variante, options_for_select([[t('.free'), "free"],[t('.pro'), "pro"],[t('.enterprise'),"enterprise"]]) %>
   <% end %>
  <h4 style="color:#000;" > Crea un supervisor para la red. </h4></br></br>
   <%= form.semantic_fields_for :supervisors do |user| %>
@@ -34,6 +34,7 @@
   <% end %>
 </div>
 <% end %>
+</div>
 </div>
 </div>
 </div>
