--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -18,6 +18,8 @@ $(document).ready(function() {
 	    </div>
 	</div>
 <div id="desplegable-interno" style="overflow:auto; height:300px; display:none;">
+<% if @tutoriales.acount < 0 %>
+<%else%>
 <% @tutoriales.each do |tutoriale| %>
     <div class="row with line" style="margin:0px; padding:0px;">
 <div class="user padding-all <%= cycle('odd', 'even') %>">
@@ -44,6 +46,7 @@ $(document).ready(function() {
 	<%="Descrición: #{tutoriale.description}"%>
 </div>
 </div>
+<% end %>
 <% end %>
 </div>
 </div>
