subiendo tutoriales validación de tutoriales1

--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -18,7 +18,7 @@ $(document).ready(function() {
 	    </div>
 	</div>
 <div id="desplegable-interno" style="overflow:auto; height:300px; display:none;">
-<% if @tutoriales.acount < 0 %>
+<% if @tutoriales.count < 0 %>
 <%else%>
 <% @tutoriales.each do |tutoriale| %>
     <div class="row with line" style="margin:0px; padding:0px;">
