--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -276,9 +276,9 @@ $(document).ready(function() {
 	
    	<% califn = califn + delivery.score ? delivery.score : 0  if delivery.raiting%>
     <% codn = califn/@course.users.count%>
-    <% codan = codn-100%>
-    <% porcento_delivery.push(codn)%>
-    <% grafica_reprobacion_delivery.push(codan)%>  
+    <%# codan = codn-100%>
+    <%# porcento_delivery.push(codn)%>
+    <% grafica_reprobacion_delivery.push(codn)%>  
  <%end%>
 <%end%>
 <div id="value2cal"></div>
