--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -276,8 +276,8 @@ $(document).ready(function() {
 	
    	<% califn = califn + delivery.score ? delivery.score : 0  if delivery.raiting%>
     <% codn = califn/@course.users.count%>
-    <%# codan = codn-100%>
-    <%# porcento_delivery.push(codn)%>
+    <% codan = (-1*codn)+100)%>
+    <% porcento_delivery.push(codan)%>
     <% grafica_reprobacion_delivery.push(codn)%>  
  <%end%>
 <%end%>
