--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -276,7 +276,7 @@ $(document).ready(function() {
 	
    	<% califn = califn + delivery.score ? delivery.score : 0  if delivery.raiting%>
     <% codn = califn/@course.users.count%>
-    <% codan = 100-codn)%>
+    <% codan = 100-codn%>
     <% porcento_delivery.push(codan)%>
     <% grafica_reprobacion_delivery.push(codn)%>  
  <%end%>
