subiendo a cursatest nueva-red

--- a/app/views/layouts/new_network.html.erb
+++ b/app/views/layouts/new_network.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html style="background-color: #000;">
-<head style="background-color: #000;">
+
+<html style="background-image: url(/assets/lago.png); background-repeat:no-repeat;">
+
+<head>
   <meta charset="utf-8" />
   <title>Cúrsame</title>
   <%= stylesheet_link_tag    "application" %>
@@ -13,7 +15,7 @@
   <link rel="shortcut icon" href="/favicon.ico" />
   <%= yield :head %>
 </head>
-<body  style="background-color: #000;">
+<body style="background:none; width:100%;">
 
   <!-- User voice plugin -->
   <script type="text/javascript">
