--- a/app/views/networks/_new_network.html.erb
+++ b/app/views/networks/_new_network.html.erb
@@ -25,7 +25,7 @@
 </div>
 </a>
   </br>
-<div class="right" style="margin-right: 150px; margin-top: 200px;">
+<div class="right" style="margin-right: 150px;">
 </br>
   <%= form.buttons do %>
     <%= form.submit "Crear red", :class => "btn", :button_html => {:id => :submit} %>
