subiendo a cursame telefonica

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -707,7 +707,7 @@ ul.left-nav-main-ul {
 	color: #fff;
 }
 .left-nav-main-ul li a.favoritos {
-	background: url(users-users.png) no-repeat 5px;
+	background: url(cel.png) no-repeat 5px;
 	padding-left: 30px;
 }
 
