--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -11,7 +11,7 @@
         <%= tab.principal_wall t('dashboard.start'), root_path %> 
         <%= tab.profile t('dashboard.profile'), current_user %>    
         <%= tab.members t('dashboard.propiety'), network_members_path %>
-        <%#= tab.dashboard t('dashboard.dashboard'), dashboard_path %>
+        <%= tab.dashboard t('dashboard.panel'), dashboard_path %>
         <%end%>
                  
       <ul class="nav secondary-nav">
