colocando cambios de telefonica

--- a/app/views/assignments/_assignment.html.erb
+++ b/app/views/assignments/_assignment.html.erb
@@ -3,9 +3,9 @@
   <%= assignment.course.name %>
   <div class="row">
     <div class="assignment-values">
-      <%= t('courses.assignments.value') %>: <b><%= assignment.value %></b> -
-      <%= t('courses.assignments.period') %>: <b><%= assignment.period %></b> -
-      <%= t('courses.assignments.date_time') %>: <b><%= l assignment.due_to, :format => :short %></b>
+   <!--   <%#= t('courses.assignments.value') %>: <b><%#= assignment.value %></b> -
+      <%#= t('courses.assignments.period') %>: <b><%#= assignment.period %></b> -
+      <%#= t('courses.assignments.date_time') %>: <b><%#= l assignment.due_to, :format => :short %></b>-->
     </div>
   </div>
 </div>
