--- a/app/views/courses/_course_menu.html.erb
+++ b/app/views/courses/_course_menu.html.erb
@@ -17,9 +17,10 @@
 <div class="underline">	
   <%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => { :class => "left-nav-main-ul" }) do |tab| %>
     <%= tab.course t('courses.information'), course_path(@course), :class => "informacion" %>
-    <%= tab.wall t('courses.wall.header'), wall_for_course_path(@course), :class => "actualizaciones" %>
+    <%#= tab.wall t('courses.wall.header'), wall_for_course_path(@course), :class => "actualizaciones" %>
     <%= tab.assignments t('.assignments'), course_assignments_path(@course), :class => "tareas" %>
-    <%= tab.surveys t('.surveys'), course_surveys_path(@course), :class => "surveys" %>
+    <%#= tab.surveys t('.surveys'), course_surveys_path(@course), :class => "surveys" %>
+    <%= tab.surveys 'Quizzes', course_surveys_path(@course), :class => "surveys" %>
     <%#= tab.discussions t('.discussions'), course_discussions_path(@course), :class => "discusiones" %>
      <%= tab.calification t('courses.calification.calificaciones'), calification_for_course_path(@course), :class => "calification" %>
   <% end %>
