subiendo cambios en el registro

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
               <h1><%= @network.slogan %></h1>
             <%end%>
             <% if @network.welcome_message == nil %>
-              <h3>Cúrsame es la Red Social privda y segura de tu institución, donde además podrás encontrar tus clases, tareas y cursos. <br /><br />¡Tienes la institución a un click de distancia!</h3>
+              <h3>Cúrsame es la Red Social privada y segura de tu institución, donde además podrás encontrar tus clases, tareas y cursos. <br /><br />¡Tienes la institución a un click de distancia!</h3>
             <%else%>
               <h3><%= @network.welcome_message %></h3>
             <%end%>
