subiendo modificaciones en lenguaje y video

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -135,7 +135,7 @@
    </div>
     <div class="modal-body">
 	<center>
-	 <object width="420" height="315"><param name="movie"    value="http://www.youtube.com/v/l0-viVzXobQ?version=3&amp;hl=es_ES&amp;rel=0"></param><param name="allowFullScreen" value="true" play="true"></param><param name="allowscriptaccess" value="always"></param><embed src="hhttp://www.youtube.com/v/l0-viVzXobQ?version=3&amp;hl=es_ES&amp;rel=0&amp;autoplay=1" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true" autoplay="true"></embed></object>
+	 <object width="420" height="315"><param name="movie"    value="http://www.youtube.com/v/l0-viVzXobQ?version=3&amp;hl=es_ES&amp;rel=0"></param><param name="allowFullScreen" value="true" play="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/l0-viVzXobQ?version=3&amp;hl=es_ES&amp;rel=0&amp;autoplay=1" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true" autoplay="true"></embed></object>
 	</center>
 	</div>
 	<div class="modal-footer" style="background-color:#404040; color:#fff;">
