subiendo cambios en el container de tutorials

--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -8,7 +8,8 @@ $(document).ready(function() {
 
   });
 </script>
-<div id="tutorial-all" style="width:175px; margin-left:5px; margin-top:-10px;">
+<div class="container">
+<div id="tutorial-all" style="width:155px; margin-left:5px; margin-top:-10px;">
 	<div class="tutorial-header">
 		<div class="title">
 		<center>
@@ -68,4 +69,5 @@ $(document).ready(function() {
 <object width="520" height="315"><param name="movie" value="http://www.youtube.com/v/l0-viVzXobQ?version=3&amp;hl=es_ES&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/l0-viVzXobQ?version=3&amp;hl=es_ES&amp;rel=0" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true"></embed></object>
  </center>
  </div>
+</div>
 </div>
