--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -9,9 +9,11 @@
        
         <%= tabs_tag :open_tabs => { :class => "nav" } do |tab| %>
         <%= tab.principal_wall t('dashboard.start'), root_path %> 
+        <%= tab.dashboard t('dashboard.panel'), dashboard_path %>
+        <%= tab.courses t('dashboard.campanas'), courses_path%>
         <%= tab.profile t('dashboard.profile'), wall_for_user_path(current_user) %>    
         <%= tab.members t('dashboard.propiety'), network_members_path %>
-        <%= tab.dashboard t('dashboard.panel'), dashboard_path %>
+        
         <%end%>
                  
       <ul class="nav secondary-nav">
