--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -57,4 +57,9 @@
   </div>
   <%= render :partial => "shared/footer" %>
 </div>
+<script type="text/javascript">
+  $(function(){
+    setupAutoScroll();
+  });
+</script>
 <%end%>
